2008-09-01  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Bumped up version to 0.9.9-pre1

2008-09-01  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/S3.py, S3/Config.py: Allow access to upper-case
	  named buckets again with --use-old-connect-method 
	  (uses http://s3.amazonaws.com/bucket/object instead of
	  http://bucket.s3.amazonaws.com/object)

2008-08-19  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Always output UTF-8, even on output redirects.

2008-08-01  Michal Ludvig  <michal@logix.cz>

	* TODO: Add some items

2008-07-29  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.8.3
	  ------------------------

2008-07-29  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Bumped up version to 0.9.8.3
	* NEWS: Added 0.9.8.3

2008-07-29  Michal Ludvig  <michal@logix.cz>

	* S3/Utils.py (hash_file_md5): Hash files in 32kB chunks
	  instead of reading it all up to a memory first to avoid
	  OOM on large files.

2008-07-07  Michal Ludvig  <michal@logix.cz>

	* s3cmd.1: couple of syntax fixes from Mikhail Gusarov

2008-07-03  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.8.2
	  ------------------------

2008-07-03  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Bumped up version to 0.9.8.2
	* NEWS: Added 0.9.8.2
	* s3cmd: Print version info on 'unexpected error' output.

2008-06-30  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: Re-upload when Amazon doesn't send ETag
	  in PUT response. It happens from time to time for
	  unknown reasons. Thanks "Burtc" for report and
	  "hermzz" for fix.

2008-06-27  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.8.1
	  ------------------------

2008-06-27  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Bumped up version to 0.9.8.1
	* NEWS: Added 0.9.8.1
	* s3cmd: make 'cfg' global
	* run-tests.sh: Sort-of testsuite

2008-06-23  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.8
	  ----------------------

2008-06-23  Michal Ludvig  <michal@logix.cz>
